Download Service: Fixed an issue in interrupt reason metric.

In Download.Service.Driver.InterruptReason, it tracks all downloads,
this CL changes to only track downloads with guid in download service's
database.



Bug: 765430
Change-Id: Id2ddf1a5bb39f5fa47c4d301171aa5704c1633a0
Reviewed-on: https://chromium-review.googlesource.com/667246
Commit-Queue: Xing Liu <xingliu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502869}
Former-commit-id: 2bdd5022f640fb43f6494b9b44169d0df26e3e5c