components/download/content/internal/download_driver_impl.cc
@@ -235,7 +235,8 @@ void DownloadDriverImpl::OnDownloadUpdated(content::DownloadManager* manager,
     client_->OnDownloadUpdated(entry);
   } else if (reason !=
              content::DownloadInterruptReason::DOWNLOAD_INTERRUPT_REASON_NONE) {
-    LogDownloadInterruptReason(reason);
+    if (client_->IsTrackingDownload(item->GetGuid()))
+      LogDownloadInterruptReason(reason);
     client_->OnDownloadFailed(entry, FailureTypeFromInterruptReason(reason));
   }
 }
