components/download/internal/controller_impl.cc
@@ -442,6 +442,12 @@ void ControllerImpl::OnDownloadUpdated(const DriverEntry& download) {
                             download.guid, download.bytes_downloaded));
 }
 
+bool ControllerImpl::IsTrackingDownload(const std::string& guid) const {
+  if (controller_state_ != State::READY)
+    return false;
+  return !!model_->Get(guid);
+}
+
 void ControllerImpl::OnFileMonitorReady(bool success) {
   DCHECK(!startup_status_.file_monitor_ok.has_value());
   startup_status_.file_monitor_ok = success;
